src/snapshots/blog__snapshot@inside-rust__2020__02__27__Goverance-wg.html.snap
---
source: src/lib.rs
expression: content
input_file: site/inside-rust/2020/02/27/Goverance-wg.html
snapshot_kind: text
---
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>Governance Working Group Update: Meeting 27 February 2020 | Inside Rust Blog</title>
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
<meta name="description" content="Empowering everyone to build reliable and efficient software.">
     <!-- Twitter card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@rustlang">
     <meta name="twitter:creator" content="@rustlang">
     <meta name="twitter:title" content="Governance Working Group Update: Meeting 27 February 2020 | Inside Rust Blog">
     <meta name="twitter:description" content="Want to follow along with Rust development? Curious how you might get involved? Take a look!">
    <meta name="twitter:image" content="https://www.rust-lang.org/static/images/rust-social.jpg">
    
    <!-- Facebook OpenGraph -->
    <meta property="og:title" content="Governance Working Group Update: Meeting 27 February 2020 | Inside Rust Blog" />
    <meta property="og:description" content="Want to follow along with Rust development? Curious how you might get involved? Take a look!">
    <meta property="og:image" content="https://www.rust-lang.org/static/images/rust-social-wide.jpg" />
    <meta property="og:type" content="website" />
    <meta property="og:locale" content="en_US" />
    
    <!-- styles -->
    <link rel="stylesheet" href="../../../../styles/vendor.css"/>
    <link rel="stylesheet" href="../../../../styles/fonts.css"/>
    <link rel="stylesheet" href="../../../../styles/app.css"/>
    <link rel="stylesheet" href="../../../../styles/highlight.css"/>
    
    <!-- stylesheet for user agents without js -->
    <noscript>
        <link rel="stylesheet" href="../../../../styles/noscript.css">
    </noscript>
    
    <!-- favicon -->
    <link rel="apple-touch-icon" sizes="180x180" href="../../../../images/apple-touch-icon.png">
    <link rel="icon" type="image/png" sizes="16x16" href="../../../../images/favicon-16x16.png">
    <link rel="icon" type="image/png" sizes="32x32" href="../../../../images/favicon-32x32.png">
    <link rel="icon" type="image/svg+xml" href="../../../../images/favicon.svg">
    <link rel="manifest" href="../../../../images/site.webmanifest">
    <link rel="mask-icon" href="../../../../images/safari-pinned-tab.svg" color="#5bbad5">
    <meta name="msapplication-TileColor" content="#00aba9">
    <meta name="theme-color" content="#ffffff">
    
     <!-- atom -->
     <link type="application/atom+xml" rel="alternate" href="https://blog.rust-lang.org/inside-rust/feed.xml" title="Inside Rust Blog" />
    
    <!-- theme switcher -->
    <script src="../../../../scripts/theme-switch.js"></script>
  </head>
  <body>
    <nav class="flex flex-row justify-center justify-end-l items-center flex-wrap ph2 pl3-ns pr4-ns">
      <div class="brand flex-auto w-100 w-auto-l self-start tc tl-l">
        <a href="../../../../inside-rust/">
          <img class="v-mid ml0-l rust-logo" alt="Rust Logo" src="../../../../images/rust-logo-blk.svg">
          <span class="dib ml1 ml0-l">Inside Rust Blog</span>
        </a>
      </div>
    
      <ul class="nav list w-100 w-auto-l flex flex-none flex-row flex-wrap justify-center justify-end-l items-center pv2 ph0 ph4-ns">
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org">Rust</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools/install">Install</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/learn">Learn</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools">Tools</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/governance">Governance</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/community">Community</a></li>
        <button class="theme-icon" onclick="dropdown();">🖌
          <ul id="theme-choice">
            <li class="theme-item" onclick="changeThemeTo('light');">Light</li>
            <li class="theme-item" onclick="changeThemeTo('dark');">Dark</li>
            <li class="theme-item" onclick="changeThemeTo('system');">System</li>
          </ul>
        </button>
        <script src="../../../../scripts/theme-switch-post.js"></script>
      </ul>
    </nav>
<section id="Governance Working Group Update: Meeting 27 February 2020" class="white">
  <div class="w-100 mw-none ph3 mw8-m mw8-l center f3">
    <header>
      <h2>Governance Working Group Update: Meeting 27 February 2020</h2>
      <div class="highlight mt2 mb3"></div>
    </header>

    <div class="publish-date-author">Feb. 27, 2020 &middot; Val Grimm
     on behalf of <a href="https://github.com/rust-lang/wg-governance">The Governance WG</a> 
    </div>

    <div class="post">
      <p>Hello everyone!</p>
<p>This was the first governance working group meeting on Zulip.
The following meeting will take place on 12 March.
Reminder that EST &amp; PST have changed to DST (summer time) as of 8 March, and CET will not change to DST until 29 March. These are most active timezones at present in governance wg so other timezones not evaluated.</p>
<p>The agenda included</p>
<ol>
<li>Access policy RFC draft from Nell</li>
<li>Pre-RFC process - determine right place to talk about this</li>
<li>Follow-up on moving (community, devtools, nursery) to rust-lang</li>
</ol>
<p>You can find the <a href="https://github.com/rust-lang/wg-governance/blob/master/minutes/2020.02.27">detailed minutes</a> on the <a href="https://github.com/rust-lang/wg-governance/">wg-governance</a> repository, but here is a quick summary:</p>
<ul>
<li>Access policy RFC draft
<ul>
<li>Approved to submit as RFC</li>
</ul>
</li>
<li>Pre-RFC process
<ul>
<li>Discussing on 12 March</li>
</ul>
</li>
<li>Follow-up on moving (community, devtools, nursery) to rust-lang
<ul>
<li>Not complete, but some items discussed, list in official minutes</li>
</ul>
</li>
</ul>
<p>There was additional off-agenda discussion after meeting about</p>
<ul>
<li>
<p>Meeting Length</p>
<ul>
<li>Outcome: 45-60 minutes</li>
</ul>
</li>
<li>
<p>Handling Alumni</p>
<ul>
<li>Need to define what info is needed</li>
<li>How talk about team Alumni who are not project alumni</li>
<li>Further discussion between XAMPPRocky and PietroAlbini, needs to be reported</li>
</ul>
</li>
<li>
<p>Intro to contributing</p>
<ul>
<li>Need a general intro as current info focused on main groups</li>
<li>Needs followup</li>
</ul>
</li>
<li>
<p>Followup items not addressed on 12 March can be addressed in later meetings or async on Zulip, outcomes will be reported. <a href="https://rust-lang.zulipchat.com/#narrow/stream/223182-wg-governance/topic/meeting.202020-02-27">Zulip thread</a> links will be included in meeting summary blog posts in future.</p>
</li>
</ul>
<h2><a href="#next-meeting" aria-hidden="true" class="anchor" id="next-meeting"></a>Next meeting</h2>
<ul>
<li>Our next meeting will be 12 March 2020 via Zulip 18-19 CET / 1pm-2pm EST / 10-11am PST.</li>
<li>In 2020 the agenda is always at https://hackmd.io/ATj1rZJaRimaIfIWfAOYfQ</li>
<li>Current plan is:
<ol>
<li>Pre-RFC process</li>
<li>How to manage RFC discussion</li>
<li>Plan agenda for next time, see Action Items in minutes from Feb 27</li>
</ol>
</li>
</ul>

    </div>
  </div>
</section>
    <footer>
      <div class="w-100 mw-none ph3 mw8-m mw9-l center f3">
        <div class="row">
          <div class="four columns mt3 mt0-l" id="get-help">
            <h4>Get help!</h4>
            <ul>
              <li><a href="https://doc.rust-lang.org" target="_blank" rel="noopener">Documentation</a></li>
              <li><a href="mailto:core-team@rust-lang.org">Contact the Rust Team</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Terms and policies</h4>
            <ul>
              <li><a href="https://www.rust-lang.org/policies/code-of-conduct">Code of Conduct</a></li>
              <li><a href="https://www.rust-lang.org/policies/licenses">Licenses</a></li>
              <li><a href="https://www.rust-lang.org/policies/media-guide">Logo Policy and Media Guide</a></li>
              <li><a href="https://www.rust-lang.org/policies/security">Security Disclosures</a></li>
              <li><a href="https://www.rust-lang.org/policies">All Policies</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Social</h4>
            <div class="flex flex-row flex-wrap">
              <a rel="me" href="https://social.rust-lang.org/@rust" target="_blank" rel="noopener" alt="mastodon link"><img src="../../../../images/mastodon.svg" alt="mastodon logo" title="Mastodon"/></a>
              <a href="https://twitter.com/rustlang" target="_blank" rel="noopener" alt="twitter link"><img src="../../../../images/twitter.svg" alt="twitter logo" title="Twitter"/></a>
              <a href="https://www.youtube.com/channel/UCaYhcUwRBNscFNUKTjgPFiA" target="_blank" rel="noopener" alt="youtube link"><img style="padding-top: 6px; padding-bottom:6px" src="../../../../images/youtube.svg" alt="youtube logo" title="YouTube"/></a>
              <a href="https://discord.gg/rust-lang" target="_blank" rel="noopener" alt="discord link"><img src="../../../../images/discord.svg" alt="discord logo" title="Discord"/></a>
              <a href="https://github.com/rust-lang" target="_blank" rel="noopener" alt="github link"><img src="../../../../images/github.svg" alt="github logo" title="GitHub"/></a>
            </div>
            <h4 class="mt4 mb3">RSS</h4>
            <ul>
              <li><a href="../../../../feed.xml">Main Blog</a></li>
              <li><a href="../../../../inside-rust/feed.xml">"Inside Rust" Blog</a></li>
            </ul>
          </div>
    
        </div>
        <div class="attribution">
          Maintained by the Rust Team. See a typo?
          <a href="https://github.com/rust-lang/blog.rust-lang.org" target="_blank" rel="noopener">Send a fix here</a>!
        </div>
      </div>
    </footer>
    
    <!-- scripts -->
    <script src="../../../../scripts/highlight.js"></script>
  </body>
</html>
